Fix the font type of the figures

--- a/experiments/analysis/Figure_1.ipynb
+++ b/experiments/analysis/Figure_1.ipynb
@@ -26,6 +26,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "plt.rcParams['pdf.fonttype'] = 42\n",
+    "plt.rcParams['ps.fonttype'] = 42\n",
+    "\n",
     "data_dir = '../data/'\n",
     "\n",
     "# Visualizaition of strain-stress curves in Figure 1\n",
