--- a/experiments/analysis/Figure_3.ipynb
+++ b/experiments/analysis/Figure_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,6 +21,8 @@
     "import numpy as np\n",
     "\n",
     "plt.rcParams.update({'font.size': 20})\n",
+    "plt.rcParams['pdf.fonttype'] = 42\n",
+    "plt.rcParams['ps.fonttype'] = 42\n",
     "\n",
     "# Create a figure and a set of subplots\n",
     "fig, ax = plt.subplots()\n",
