--- a/experiments/analysis/Figure_5.ipynb
+++ b/experiments/analysis/Figure_5.ipynb
@@ -17,7 +17,9 @@
     "import time\n",
     "import torch\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "plt.rcParams['pdf.fonttype'] = 42\n",
+    "plt.rcParams['ps.fonttype'] = 42"
    ]
   },
   {
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
