--- a/experiments/analysis/Figure_9.ipynb
+++ b/experiments/analysis/Figure_9.ipynb
@@ -17,7 +17,9 @@
     "from sklearn.metrics import r2_score\n",
     "from interpret.glassbox import ExplainableBoostingRegressor\n",
     "from pysr import PySRRegressor\n",
-    "from interpret import show"
+    "from interpret import show\n",
+    "plt.rcParams['pdf.fonttype'] = 42\n",
+    "plt.rcParams['ps.fonttype'] = 42"
    ]
   },
   {
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +64,7 @@
        "0.8754164306867275"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +177,13 @@
     "fig.colorbar(im, cax=cbar_ax)\n",
     "plt.savefig('figures/Figure_9.pdf')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
